[gd_scene load_steps=2 format=3 uid="uid://bcl2yuf3xwp40"]

[ext_resource type="Script" path="res://AutoLoad/http_request.gd" id="1_yxrnp"]

[node name="HttpRequest" type="Node"]
script = ExtResource("1_yxrnp")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest_GetDate" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="request_completed" from="HTTPRequest_GetDate" to="." method="_on_http_request_get_date_request_completed"]
